--- a/index.html
+++ b/index.html
@@ -108,11 +108,17 @@
         </div>
 
 
-        <div class="row" style="margin-top: 20vh; margin-bottom: 20vh;">
+        <div class="row" style="margin-top: 15vh; margin-bottom: 20vh;">
             <h6 style="cursor: pointer;" id="clk" onclick="copy()">Click to copy</h6>
             <div class="col d-flex justify-content-center py-5" onClick="copy()"
                 style="cursor: pointer; background-color: rgb(229, 229, 229); border-radius: 25px; border-color: black;">
                 <p class="fw-bold" id="output"></p>
+            </div>
+        </div>
+
+        <div class="row my-5">
+            <div class="col d-flex justify-content-center">
+                <h5 class="text-muted">Created By <a href="https://shehabapp.netlify.app/">ShehabApp</a></h5>
             </div>
         </div>
     </div>
